--- a/Workflow/Workflow.Rmd
+++ b/Workflow/Workflow.Rmd
@@ -384,7 +384,6 @@ This resource offers gene annotations, such as exon positions and promoters, for
 the Ensembl data base.
 
 ```{r gene-length}
-
 # Build exon list
 exons.list <- exonsBy(EnsDb.Mmusculus.v79, by = "gene")
 
@@ -526,10 +525,9 @@ In the next step, we will first generate a `r Biocpkg("SingleCellExperiment")`
 metadata.
 This data class offers convenient ways to subset, and to set and retrieve cell- 
 and gene-specific information.  
-We will also store information on the spike-in molecules using the `isSpike` 
-accessor. 
-Therefore, the SCE object stores gene-specific information whether or not a gene 
-is of biological (endogeneous) or technical (spike-in) origin.
+We will also store information on the spike-in molecules using the `altExp` 
+accessor. This allows us to store alternative experimental assays other
+than endogenous genes --- in this case, technical (spike-in) genes.
 
 ```{r CD4-SCE-object}
 # Load library
@@ -569,7 +567,8 @@ quality metrics need to be closely examined as suggested by the
 
 ```{r gene-selection}
 # Remove genese)
-ind_expressed <- rowSums(counts(sce.naive_active) > 0) > 1 & rowMeans(counts(sce.naive_active)) >= 1
+ind_expressed <- rowSums(counts(sce.naive_active) > 0) > 1 &
+  rowMeans(counts(sce.naive_active)) >= 1
 sce.naive_active <- sce.naive_active[ind_expressed, ]
 ```
 
@@ -600,10 +599,10 @@ component analysis (PCA) across all cells.
 sce.naive_active <- addPerCellQC(sce.naive_active, use_altexps = TRUE)
 sce.naive_active <- addPerFeatureQC(sce.naive_active)
 
+clean_colnames <- make.names(colnames(colData(sce.naive_active)))
+colnames(colData(sce.naive_active)) <- clean_colnames
 
-colnames(colData(sce.naive_active)) <- make.names(colnames(colData(sce.naive_active)))
-
-# Calcualte PCA
+# Calculate PCA
 sce.naive_active <- scater::runPCA(sce.naive_active)
 ```
 
@@ -822,7 +821,8 @@ that was generated above.
 ```{r SCE-naive}
 ind_stimulated <- sce.naive_active$Stimulus == "Unstimulated"
 sce.naive <- sce.naive_active[, ind_stimulated]
-ind_expressed <- rowSums(counts(sce.naive) > 0) > 1 & rowMeans(counts(sce.naive)) >= 1
+ind_expressed <- rowSums(counts(sce.naive) > 0) > 1 & 
+  rowMeans(counts(sce.naive)) >= 1
 sce.naive <- sce.naive[ind_expressed, ]
 ```
 
@@ -835,7 +835,11 @@ Next, we will use the `newBASiCS_Data` function to re-generate the
 # Select the ERCC spike-ins of the dataset
 counts <- counts(sce.naive)
 spikes <- assay(altExp(sce.naive, "spike-ins"))
-spikes <- spikes[rowSums(spikes) > 0, ]
+spikes_present <- rowSums(spikes) != 0
+## Remove spike-ins that are not present from matrix and SCE object
+spikes <- spikes[spikes_present, ]
+altexp_present <- altExp(sce.naive, "spike-ins")[spikes_present, ]
+altExp(sce.naive, "spike-ins") <- altexp_present
 ind_spike <- c(rep(FALSE, nrow(counts)), rep(TRUE, nrow(spikes)))
 SpikeInput <- ERCC.count[rownames(spikes), ]
 
@@ -857,7 +861,7 @@ to the `metadata` slot.
 ```{r Data-naive-alternative}
 Data.naive <- sce.naive
 colData(Data.naive)$BatchInfo <- colData(sce.naive)$Individuals
-metadata(Data.naive)$SpikeInput <- SpikeInput$count
+metadata(Data.naive)$SpikeInput <- SpikeInput
 ```
 
 After creating the `SingleCellExperiment` object that contains all information 
